manifests/05-stf-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: projeto-deploy-database
  namespace: ns-deploy
spec:
  selector:
    matchLabels:
      app: projeto-db
  serviceName: svc-database
  template:
    metadata:
      labels:
        app: projeto-db
    spec:
      containers:
      - name: projeto-db
        image: williandrade82/projeto-deploy-db:latest
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-database

  # - metadata:
  #     name: mysql-persistent-storage
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     resources:
  #       requests:
  #         storage: 10Gi
  #     selector:
  #       matchLabels:
  #         app:
