manifests/06-svc-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-database
  namespace: ns-deploy
spec:
  selector:
    app: projeto-db
  ports:
  - port: 3306
    targetPort: 3306
