manifests/08-ing-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: ns-deploy
  labels:
    name: httpd-ingress
spec:
  rules:
  - host: projeto-deploy.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-backend
            port: 
              number: 80
